Truncate long columns and smaller text per issue #22.

--- a/css/demo_table_jui.css
+++ b/css/demo_table_jui.css
@@ -1,33 +1,4 @@
 /*
- *  File:         demo_table_jui.css
- *  CVS:          $Id$
- *  Description:  CSS descriptions for DataTables demo pages
- *  Author:       Allan Jardine
- *  Created:      Tue May 12 06:47:22 BST 2009
- *  Modified:     $Date$ by $Author$
- *  Language:     CSS
- *  Project:      DataTables
- *
- *  Copyright 2009 Allan Jardine. All Rights Reserved.
- *
- * ***************************************************************************
- * DESCRIPTION
- *
- * The styles given here are suitable for the demos that are used with the standard DataTables
- * distribution (see www.datatables.net). You will most likely wish to modify these styles to
- * meet the layout requirements of your site.
- *
- * Common issues:
- *   'full_numbers' pagination - I use an extra selector on the body tag to ensure that there is
- *     no conflict between the two pagination types. If you want to use full_numbers pagination
- *     ensure that you either have "example_alt_pagination" as a body class name, or better yet,
- *     modify that selector.
- *   Note that the path used for Images is relative. All images are by default located in
- *     ../images/ - relative to this CSS file.
- */
-
-
-/*
  * jQuery UI specific styling
  */
 
@@ -181,6 +152,7 @@ table.display {
 	width: 100%;
 	clear: both;
 	border-collapse: collapse;
+	table-layout: fixed;
 }
 
 table.display tfoot th {
@@ -203,15 +175,22 @@ table.display td {
 	text-align: center;
 	vertical-align: middle;
 	/*font-size: 10px;*/
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
-table.display td.left {
-	text-align: left; /* use for long text like notes */
+/* use for long text like notes */
+table.display td.small {
+	/*text-align: left;*/
+	font-size: 0.80em;
+	line-height: 1em;
 }
 
 table.display tr:hover {
 	background: #C5D6AD;
 }
+
 
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
